--- a/map.html
+++ b/map.html
@@ -8,7 +8,7 @@
     <style>
         #map {
             width: 100%;
-            height: 600px;
+            height: 600vh;
         }
     </style>
 </head>
