--- a/map.html
+++ b/map.html
@@ -33,7 +33,8 @@
 <script src="https://unpkg.com/jquery/dist/jquery.min.js"></script>
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script src="https://unpkg.com/leaflet.locatecontrol/dist/L.Control.Locate.min.js"></script>
-
+<script type="text/javascript" src="Leaflet.Coordinates-0.1.5.min.js"></script>
+	<link rel="stylesheet" href="Leaflet.Coordinates-0.1.5.css"/>
 <script>
     $(document).ready(function () {
         // สร้างแผนที่และตั้งค่าเริ่มต้น
