--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <p class="text-muted-foreground mb-4">เพื่อใช้ติดตามงานติดตั้งและขยายเขตผู้ใช้น้ำอย่างมีระบบ</p>
   <div class="mb-4">
     <label for="email" class="block text-muted">Email</label>
-    <input type="email" id="email" class="border border-border rounded-lg p-2 w-full" placeholder="firstwantup@gmail.com" />
+    <input type="email" id="email" class="border border-border rounded-lg p-2 w-full" placeholder="patcharapon.pwa@gmail.com" />
     <span class="text-muted-foreground">Not shared</span>
   </div>
   <p class="text-muted mb-2">* Indicates required question</p>
